2008-09-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Patch the OpenJDK build with the version
	of IcedTea being used. Use $(HG) instead of 'hg'.
	* configure.ac:
	Always check for Mercurial, but only fail
	if --enable-hg is active.

2008-09-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-hotspot-citypeflow.patch:
	Removed, fixed upstream.
	* Makefile.am: Bump to b35, remove citypeflow patch.
	* patches/icedtea-ecj.patch: Recreated against b35.
	* tools-copy/tools-jdk-copy-files.txt: Add javax.script.

2008-09-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Reported by: Lillian Angel
	* Makefile.am: Make sure we create
	the stamps directory for hgforest.stamp.

2008-09-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Simplify hgforest
	rule and add corresponding clean rule.

2008-09-01  C. K. Jester-Young  <cky944@gmail.com>

	* acinclude.m4:
	Enable hg by default unless building jdk7.
	* configure.ac:
	Do project check before hg check.

2008-08-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Merge from IcedTea6.
	* config.guess,
	* config.sub,
	* install-sh,
	* patches/icedtea-arm-uname.patch: Removed.
	* .hgignore,
	* ChangeLog,
	* HACKING,
	* IcedTeaPlugin.cc,
	* Makefile.am,
	* README,
	* acinclude.m4: Merged.
	* autogen.sh: Added.
	* configure.ac: Merged.
	* generated/sun/misc/Version.java,
	* generated/sun/tools/jconsole/Version.java:
	Merged and updated for 1.7.
	* jconsole.desktop,
	* patches/icedtea-alpha-fixes.patch,
	* patches/icedtea-alt-jar.patch: Merged.
	* patches/icedtea-arch.patch: Merged and
	recreated against jdk7.
	* patches/icedtea-cacao.patch,
	* patches/icedtea-clean-crypto.patch,
	* patches/icedtea-enum-bug-181.patch,
	* patches/icedtea-hotspot-6b11-7b24.patch:
	Merged.
	* patches/icedtea-hotspot-citypeflow.patch:
	Merged and regenerated against jdk7.
	* patches/icedtea-hotspot-gcc-pr36917.patch:
	Merged.
	* patches/icedtea-hotspot-params-cast-size_t.patch: