@@ -225,6 +225,7 @@ AC_CHECK_WITH_CACAO_SRC_ZIP
 ENABLE_OPTIMIZATIONS
 ENABLE_ZERO_BUILD
 SET_CORE_OR_SHARK_BUILD
+WITH_VERSION_SUFFIX
 WITH_PROJECT
 ENABLE_HG
 
